Issue #5260: Various portability and standards compliance fixes, optimizations and cleanups in Objects/longobject.c.  The most significant change is that longs now use less memory:  average savings are 2 bytes per long on 32-bit systems and 6 bytes per long on 64-bit systems.  (This memory saving already exists in py3k.)